--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +15,126 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.container {
+  width: 100%;
+  max-width: 1300px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  width: 100%;
+}
+
+.section-hero {
+  background-image: url("./images/621910ba491098472935e247_bg-blur-2-web3-webflow-ecommerce-template.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.font-display-1 {
+  font-size: 40px;
+}
+
+@media screen and (min-width:767px) {
+  .font-display-1 {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width:991px) {
+  .font-display-1 {
+    font-size: 64px;
+  }
+}
+
+.font-display-2 {
+  font-size: 34px;
+}
+
+@media screen and (min-width:767px) {
+  .font-display-2 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width:991px) {
+  .font-display-2 {
+    font-size: 58px;
+  }
+}
+
+.font-display-3 {
+  font-size: 24px;
+}
+
+@media screen and (min-width:767px) {
+  .font-display-3 {
+    font-size: 26px;
+  }
+}
+
+@media screen and (min-width:991px) {
+  .font-display-3 {
+    font-size: 32px;
+  }
+}
+
+.font-display-4 {
+  font-size: 18px;
+}
+
+@media screen and (min-width:767px) {
+  .font-display-4 {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width:991px) {
+  .font-display-4 {
+    font-size: 20px;
+  }
+}
+
+/* paddings */
+
+.pt-5 {
+  padding-top: 100px;
+}
+
+.pt-1 {
+  padding-top: 20px;
+}
+
+.pb-1 {
+  padding-bottom: 20px;
+}
+
+/* NavBar */
+.navbar-logo {
+  font-size: 30px;
+}
+
+.navbar {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+ul {
+  list-style: none;
+}
+
+.menu-icon {
+  font-size: 35px;
+  transition: all .2s ease-in;
+}
+
+.menu-icon:hover {
+  transform: scale(.9);
 }
